crates/bitnet-quantization/tests/snapshots/snapshot_wave28__snapshot_cpu_dequantize_i2s_round_trip.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave28.rs
expression: output
---
[
    0.0,
    1.0,
    -1.0,
    0.0,
    0.0,
    0.0,
    0.0,
    1.0,
]
