crates/bitnet-quantization/tests/snapshots/snapshot_wave28__snapshot_cpu_dequantize_tl1_round_trip.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave28.rs
expression: output
---
[
    -0.0667,
    1.0,
    -1.0,
    0.4667,
    -0.6,
    0.2,
    -0.3333,
    0.7333,
]
