crates/bitnet-quantization/tests/snapshots/snapshot_wave28__snapshot_cpu_quantize_i2s_known_input.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave28.rs
expression: quantized
---
QuantizedTensor {
    data: [
        52,
        64,
    ],
    qtype: I2S,
    shape: [
        8,
    ],
    scales: [
        1.0,
    ],
    zero_points: None,
    block_size: 32,
}
