crates/bitnet-quantization/tests/snapshots/snapshot_wave28__snapshot_cpu_quantize_tl1_known_input.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave28.rs
expression: quantized
---
QuantizedTensor {
    data: [
        7,
        15,
        0,
        11,
        3,
        9,
        5,
        13,
    ],
    qtype: TL1,
    shape: [
        8,
    ],
    scales: [
        1.0,
    ],
    zero_points: None,
    block_size: 16,
}
