crates/bitnet-quantization/tests/snapshots/snapshot_wave28__snapshot_device_quantization_type_all_variants.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave28.rs
expression: variants
---
[
    I2S,
    TL1,
    TL2,
    IQ2S,
    FP32,
]
