crates/bitnet-quantization/tests/snapshots/snapshot_wave28__snapshot_device_quantization_type_display.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave28.rs
expression: displays
---
[
    "I2_S",
    "TL1",
    "TL2",
    "IQ2_S",
    "FP32",
]
