crates/bitnet-quantization/tests/snapshots/snapshot_wave28__snapshot_i2s_layout_block_size_256.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave28.rs
expression: desc
---
block_size=256 bytes_per_block=66 data_bytes=64 scale_bytes=2
