crates/bitnet-quantization/tests/snapshots/snapshot_wave28__snapshot_i2s_layout_default.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave28.rs
expression: desc
---
block_size=32 bytes_per_block=10 data_bytes=8 scale_bytes=2
