crates/bitnet-quantization/tests/snapshots/snapshot_wave28__snapshot_quantization_config_default.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave28.rs
expression: cfg
---
QuantizationConfig {
    quantization_type: I2S,
    block_size: 64,
    precision: 0.0001,
}
