crates/bitnet-quantization/tests/snapshots/snapshot_wave28__snapshot_quantization_config_tl2.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave28.rs
expression: cfg
---
QuantizationConfig {
    quantization_type: TL2,
    block_size: 128,
    precision: 0.001,
}
